Fix deprecated API warnings: Sound.valueOf, header(), getDescription(), URL(String), unused targetName
Co-authored-by: Praveenkumar801 <131750384+Praveenkumar801@users.noreply.github.com>