@@ -21,11 +21,13 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.reflect.Method;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -74,12 +76,13 @@ public class Metrics {
       // Inform the server owners about bStats
       config
           .options()
-          .header(
-              "bStats (https://bStats.org) collects some basic information for plugin authors, like how\n"
-                  + "many people use their plugin and their total player count. It's recommended to keep bStats\n"
-                  + "enabled, but if you're not comfortable with this, you can turn this setting off. There is no\n"
-                  + "performance penalty associated with having metrics enabled, and data sent to bStats is fully\n"
-                  + "anonymous.")
+          .setHeaderComments(
+              List.of(
+                  "bStats (https://bStats.org) collects some basic information for plugin authors, like how",
+                  "many people use their plugin and their total player count. It's recommended to keep bStats",
+                  "enabled, but if you're not comfortable with this, you can turn this setting off. There is no",
+                  "performance penalty associated with having metrics enabled, and data sent to bStats is fully",
+                  "anonymous."))
           .copyDefaults(true);
       try {
         config.save(configFile);
@@ -151,7 +154,7 @@ public class Metrics {
   }
 
   private void appendServiceData(JsonObjectBuilder builder) {
-    builder.appendField("pluginVersion", plugin.getDescription().getVersion());
+    builder.appendField("pluginVersion", plugin.getPluginMeta().getVersion());
   }
 
   private int getPlayerAmount() {
@@ -352,7 +355,12 @@ public class Metrics {
         infoLogger.accept("Sent bStats metrics data: " + data.toString());
       }
       String url = String.format(REPORT_URL, platform);
-      HttpsURLConnection connection = (HttpsURLConnection) new URL(url).openConnection();
+      HttpsURLConnection connection;
+      try {
+        connection = (HttpsURLConnection) new URI(url).toURL().openConnection();
+      } catch (URISyntaxException e) {
+        throw new IOException("Invalid bStats report URL: " + url, e);
+      }
       // Compress the data to save bandwidth
       byte[] compressedData = compress(data.toString());
       connection.setRequestMethod("POST");
